- updated the code and add lua scripts